--- a/css/projects_exterior/mobile.css
+++ b/css/projects_exterior/mobile.css
@@ -192,6 +192,251 @@ header .menu-container .nav-active {
   }
 }
 
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.row .column {
+  position: relative;
+}
+
+.row .column img {
+  width: 90vw;
+  height: 50vh;
+}
+
+.center_button {
+  position: absolute;
+  pointer-events: none;
+  width: 90vw;
+  height: 50vh;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  background-color: transparent;
+}
+
+.button-container {
+  pointer-events: auto;
+  padding-bottom: 10px;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.button-container button {
+  background-color: #161616;
+  border-radius: 8px;
+  width: 80px;
+  height: 28px;
+  color: #e9e9e9;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+
+.button-container .active-button {
+  background-color: #e9e9e9;
+  color: black;
+  border: 1px solid black;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 105;
+  padding-top: 5vh;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  background-color: #161616;
+}
+
+.modal-content {
+  position: relative;
+  margin: auto;
+  width: 90vw;
+  height: 90vh;
+}
+
+.center_button_modal {
+  position: absolute;
+  width: 90vw;
+  height: 90vh;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  background-color: transparent;
+}
+
+.close {
+  color: white;
+  position: absolute;
+  right: 5vw;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+  position: relative;
+}
+
+.mySlides img {
+  width: 90vw;
+  height: 70vh;
+  padding-top: 10vh;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 5vw;
+  color: white;
+  font-weight: bold;
+  font-size: 38px;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+#submit {
+  margin-top: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#submit #submit-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#submit #submit-button .halfCircleLeft {
+  width: 25px;
+  height: 45px;
+  border: 3px solid #e9e9e9;
+  border-right: none;
+  border-radius: 25px 0 0 25px;
+}
+
+#submit #submit-button .rectangle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 145px;
+  height: 45px;
+  border-top: 3px solid #e9e9e9;
+  border-bottom: 3px solid #e9e9e9;
+  text-align: center;
+}
+
+#submit #submit-button .rectangle .request-container {
+  padding-top: 2px;
+}
+
+#submit #submit-button .rectangle .request-container a {
+  text-decoration: none;
+  color: #e9e9e9;
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+#submit #submit-button .halfCircleRight {
+  width: 25px;
+  height: 45px;
+  border: 3px solid #e9e9e9;
+  border-left: none;
+  border-radius: 0 25px 25px 0;
+}
+
 #line {
   border-top: 1px solid #ef9629;
   margin-top: 5vh;
