--- a/css/projects_exterior/mobile.scss
+++ b/css/projects_exterior/mobile.scss
@@ -137,6 +137,186 @@ header {
 
 }
 
+.row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .column{
+        position: relative;
+        img{
+            width: 90vw;
+            height: 50vh;
+        }
+    }
+}
+.center_button{
+    position: absolute;
+    pointer-events:none;
+    width: 90vw;
+    height: 50vh;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: transparent;
+}
+
+.button-container{
+    pointer-events:auto;
+    padding-bottom: 10px;
+    transition: 0.6s ease;
+    user-select: none;
+    button{
+        background-color: $background-color;
+        border-radius: 8px;
+        width: 80px;
+        height: 28px;
+        color: $font-color;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        letter-spacing: 2px;
+    }
+    .active-button{
+        background-color:$font-color;
+        color: black;
+        border: 1px solid black;
+    }
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 105;
+    padding-top: 5vh;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    background-color: $background-color;
+}
+
+.modal-content{
+    position: relative;
+    margin: auto;
+    width: 90vw;
+    height: 90vh;
+}
+
+.center_button_modal{
+    position: absolute;
+    width: 90vw;
+    height: 90vh;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: transparent;
+}
+
+.close{
+    color: white;
+    position: absolute;
+    //top: 10vh;;
+    right: 5vw;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus{
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.mySlides{
+    display:none;
+    position: relative;
+    img{
+        width: 90vw;
+        height: 70vh;
+        padding-top: 10vh;
+    }
+}
+
+.cursor{
+    cursor: pointer;
+}
+
+.prev, .next{
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 5vw;
+    color: white;
+    font-weight: bold;
+    font-size: 38px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next{
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+#submit{
+    margin-top: 15px;
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    #submit-button{
+        display:flex;
+        flex-direction:row;
+        justify-content: center;
+        .halfCircleLeft{
+            width: 25px;
+            height: 45px;
+            border: 3px solid $font-color;
+            border-right: none;
+            border-radius: 25px 0 0 25px;
+        }
+        .rectangle{
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            width: 145px;
+            height: 45px;
+            border-top: 3px solid $font-color;
+            border-bottom: 3px solid $font-color;
+            text-align:center;
+            .request-container{
+                padding-top: 2px;
+                a{
+                    text-decoration: none;
+                    color: $font-color;
+                    font-size: 15px;
+                    text-transform: uppercase;
+                    letter-spacing: 3px;
+                }
+            }
+
+        }
+        .halfCircleRight{
+            width: 25px;
+            height: 45px;
+            border: 3px solid $font-color;
+            border-left: none;
+            border-radius: 0 25px 25px 0;            
+        }
+    }
+}
 
 //footer
 #line{
