--- a/css/contact/mobile.css
+++ b/css/contact/mobile.css
@@ -198,7 +198,7 @@ legend {
 
 legend h2 {
   color: #e9e9e9;
-  font-size: 18px;
+  font-size: 25px;
   font-weight: 500;
   letter-spacing: 3px;
 }
@@ -216,6 +216,7 @@ fieldset .input-field, fieldset .dropdown-field, fieldset .message-field {
 fieldset label {
   color: #e9e9e9;
   margin-top: 2vh;
+  font-size: 25px;
 }
 
 fieldset input, fieldset .select-container {
@@ -228,6 +229,7 @@ fieldset input, fieldset .select-container {
   background-color: transparent;
   color: #e9e9e9;
   padding: 0 0 0 0.75rem;
+  font-size: 20px;
 }
 
 fieldset .select-container {
@@ -242,10 +244,11 @@ fieldset .select-container {
 
 fieldset .select-container img {
   position: absolute;
-  right: 10vw;
+  right: 11vw;
   height: 5vh;
   min-height: 15px;
   max-height: 20px;
+  pointer-events: none;
 }
 
 fieldset select {
@@ -260,6 +263,7 @@ fieldset select {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+  font-size: 20px;
 }
 
 fieldset textarea {
@@ -271,6 +275,8 @@ fieldset textarea {
   background-color: transparent;
   padding: 0.75rem 0 0 1rem;
   border: 2px solid #e9e9e9;
+  border-radius: 5px;
+  font-size: 20px;
 }
 
 fieldset .message-field {
@@ -299,7 +305,7 @@ fieldset ::placeholder {
 }
 
 fieldset input:focus, fieldset select:focus, fieldset textarea:focus {
-  background: rgba(239, 199, 41, 0.15);
+  background: rgba(239, 199, 41, 0.05);
 }
 
 .center-button {
@@ -335,13 +341,13 @@ fieldset input:focus, fieldset select:focus, fieldset textarea:focus {
 
 .center-button .button-container button {
   color: #e9e9e9;
-  font-size: 18px;
+  font-size: 25px;
   letter-spacing: 5px;
   background-color: #161616;
   border: 2px solid #e9e9e9;
-  width: 150px;
-  height: 25px;
-  border-radius: 25px;
+  width: 200px;
+  height: 38px;
+  border-radius: 30px;
 }
 
 .line {
