--- a/css/contact/mobile.scss
+++ b/css/contact/mobile.scss
@@ -1,4 +1,6 @@
 $font-stack: Helvetica, sans-serif;
+$font-size: 20px;
+$label-size: 25px;
 $font-color: rgb(233, 233, 233);
 $background-color: rgb(22, 22, 22);
 $logo-color: #ef9629;
@@ -141,7 +143,7 @@ legend{
     text-align: center;
     h2{
         color: $font-color;
-        font-size: 18px;
+        font-size: 25px;
         font-weight: 500;
         letter-spacing: 3px;
     }
@@ -158,6 +160,7 @@ fieldset{
     label{
         color:$font-color;
         margin-top: 2vh;
+        font-size: $label-size;
     }
     input, .select-container{
         width: 80vw;
@@ -169,6 +172,7 @@ fieldset{
         background-color:transparent;
         color: $font-color;
         padding: 0 0 0 0.75rem;
+        font-size: $font-size;
     }
     .select-container{
         display: flex;
@@ -176,10 +180,11 @@ fieldset{
         padding: 0 0 0 0;
         img{
             position: absolute;
-            right: 10vw;
+            right: 11vw;
             height: 5vh;
             min-height: 15px;
             max-height: 20px;
+            pointer-events: none;
         }
     }
     select{
@@ -192,6 +197,7 @@ fieldset{
         padding: 0 0 0 0.75rem;
         position: relative;
         appearance: none;
+        font-size: $font-size;
     }
 
     textarea{
@@ -203,6 +209,8 @@ fieldset{
         background-color: transparent;
         padding: 0.75rem 0 0 1rem;
         border: 2px solid $font-color;
+        border-radius: 5px;
+        font-size: $font-size;
     }
     .message-field{
         margin-bottom: 5vh;
@@ -216,7 +224,7 @@ fieldset{
         color: grey;
     }
     input:focus, select:focus, textarea:focus{
-        background: rgba(239, 199, 41, 0.15);
+        background: rgba(239, 199, 41, 0.05);
     }
 }
 
@@ -233,13 +241,13 @@ fieldset{
         align-items: center;
         button{
             color: $font-color;
-            font-size: 18px;
+            font-size: 25px;
             letter-spacing: 5px;
             background-color: $background-color;
             border: 2px solid $font-color;
-            width: 150px;
-            height: 25px;
-            border-radius: 25px;
+            width: 200px;
+            height: 38px;
+            border-radius: 30px;
         }
     }
 }
